--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dva Demo</title>
+  <title>Laxo Wallet</title>
   <link rel="stylesheet" href="index.css" />
-  <script src="http://bitmesh-standard.oss-cn-hongkong.aliyuncs.com/btcexg/global-cdn/react.production.min.js"></script>
-<script src="http://bitmesh-standard.oss-cn-hongkong.aliyuncs.com/btcexg/global-cdn/react-dom.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 </head>
+
 <body>
 
   <div id="root"></div>
   <script src="index.js"></script>
 
 </body>
+
 </html>
